@@ -252,6 +252,7 @@ export(geom_path)
 export(geom_point)
 export(geom_pointrange)
 export(geom_polygon)
+export(geom_qq)
 export(geom_quantile)
 export(geom_raster)
 export(geom_rect)
