@@ -1,10 +1,15 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/stat-qq.r
 \name{stat_qq}
+\alias{geom_qq}
 \alias{stat_qq}
 \title{Calculation for quantile-quantile plot.}
 \usage{
 stat_qq(mapping = NULL, data = NULL, geom = "point",
+  position = "identity", distribution = qnorm, dparams = list(),
+  na.rm = FALSE, show_guide = NA, inherit.aes = TRUE, ...)
+
+geom_qq(mapping = NULL, data = NULL, geom = "point",
   position = "identity", distribution = qnorm, dparams = list(),
   na.rm = FALSE, show_guide = NA, inherit.aes = TRUE, ...)
 }
